test/bad/functions/variadic03.px

func f(...c: [Char] = ""): Void def
    skip

f()
